--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,28 +1,31 @@
+$bg-color: #f00; 
+
 .App {
   text-align: center;
+  color: $bg-color;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
+.App__logo {
+  animation: App__logo-spin infinite 20s linear;
   height: 80px;
 }
 
-.App-header {
+.App__header {
   background-color: #222;
   height: 150px;
   padding: 20px;
   color: white;
 }
 
-.App-title {
+.App__title {
   font-size: 1.5em;
 }
 
-.App-intro {
+.App__intro {
   font-size: large;
 }
 
-@keyframes App-logo-spin {
+@keyframes App__logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
