--- a/frontend/src/components/App/styles.scss
+++ b/frontend/src/components/App/styles.scss
@@ -1,7 +1,18 @@
 @import "reset-css/reset.css";
-@import url("https://fonts.googleapis.com/css?family=Roboto:400,500");
+@import url("https://fonts.googleapis.com/css?family=Roboto:300:400,500");
+
 
 body {
+  font-size: 14px;
+  line-height:  1.4;
   background-color: $bg-color;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+  font-size: $normal-font-size;
 }
+
+img {
+  max-width: 100%;
+  vertical-align: top;
+}
+
+button { border: 0 none; background-color: transparent; }
