--- a/frontend/src/shared/formStyles.scss
+++ b/frontend/src/shared/formStyles.scss
@@ -25,6 +25,10 @@
   }
   .button {
     @include blueButton();
+    i {
+      font-size: 18px;
+      margin-right: 5px;
+    }
     svg {
       margin-right: 10px;
     }
@@ -58,14 +62,21 @@
     }
   }
   .facebook-link {
-    display: flex;
     align-items: center;
     color: #385185;
     justify-content: center;
     margin-bottom: 25px;
     cursor: pointer;
-    svg {
+    background-color: white;
+    border: 0;
+    font-size: $normal-font-size;
+    text-align: center;
+    i {
       margin-right: 5px;
+    }
+    &:focus,
+    &:active {
+      outline: none;
     }
   }
   .forgot-link {
