--- a/frontend/src/components/App/styles.scss
+++ b/frontend/src/components/App/styles.scss
@@ -1,7 +1,7 @@
 @import "reset-css/reset.css";
 @import url("https://fonts.googleapis.com/css?family=Roboto:300:400,500");
 
-
+* { box-sizing: border-box; }
 body {
   font-size: 14px;
   line-height:  1.4;
