--- a/frontend/src/components/App/styles.scss
+++ b/frontend/src/components/App/styles.scss
@@ -9,6 +9,19 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   font-size: $normal-font-size;
 }
+textarea {
+  font-size: 14px;
+  line-height : 1.4;
+  font-family: -apple-system,
+  BlinkMacSystemFont,
+  "Segoe UI",
+  Roboto,
+  Helvetica,
+  Arial,
+  sans-serif;
+  font-size: $normal-font-size;
+
+} 
 
 img {
   max-width: 100%;
@@ -16,5 +29,6 @@ img {
 }
 
 button { border: 0 none; background-color: transparent; }
+button:focus { outline: none; }
 
 textarea { resize: none; }
