--- a/frontend/src/components/Loading/styles.scss
+++ b/frontend/src/components/Loading/styles.scss
@@ -1,6 +1,7 @@
 .container {
     text-align: center; 
-    padding-top: 100px; 
+    padding-top: 3%;
+    padding-bottom: 3%; 
     .spinner {
         width: 30%;
     }
