--- a/frontend/src/components/App/styles.scss
+++ b/frontend/src/components/App/styles.scss
@@ -8,6 +8,7 @@ body {
   background-color: $bg-color;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   font-size: $normal-font-size;
+  word-break: break-all;
 }
 textarea {
   font-size: 14px;
