--- a/frontend/src/components/Loading/styles.scss
+++ b/frontend/src/components/Loading/styles.scss
@@ -1,8 +1,11 @@
 .container {
+    display: flex; 
+    align-items: center;
+    justify-content: center;
     text-align: center; 
     padding-top: 3%;
     padding-bottom: 3%; 
     .spinner {
-        width: 30%;
+        width: 100px;
     }
 }
