--- a/frontend/src/components/PhotoComments/styles.scss
+++ b/frontend/src/components/PhotoComments/styles.scss
@@ -1,5 +1,6 @@
 .comments {
   margin-bottom: 12px;
+  padding: 0 6px; 
   .list {
   }
 }
@@ -7,6 +8,7 @@
   margin-bottom: 7px;
   .username {
     font-weight: 600;
+    margin-right: 10px; 
   }
   .message {
   }
