--- a/frontend/src/config/_mixin.scss
+++ b/frontend/src/config/_mixin.scss
@@ -57,15 +57,16 @@ $iphone6plus-width: 550px;
   color: white;
   font-weight: 600;
   border: 0;
-  width: 100%;
   font-size: $normal-font-size;
   line-height: 26px;
   cursor: pointer;
+  width: 100%;
+  padding: 2px 9px;
   &:focus,
   &:active {
     outline: none;
   }
   &:active {
-    opacity: 0.9;
+    opacity: 0.7;
   }
 }
