--- a/frontend/src/components/UserRow/styles.scss
+++ b/frontend/src/components/UserRow/styles.scss
@@ -5,6 +5,16 @@
   padding: 8px 16px;
   width: 100%;
   box-sizing: border-box;
+&:last-child {
+  border: 0;
+  
+}
+
+@include breakpoint("phone-tablet") {
+  border-bottom: 0;
+  
+}
+
   transition: background 0.3s;
   &:hover{
     background-color: #f2f2f2;
@@ -36,5 +46,6 @@
     .button {
       @include blueButton();
     }
+    .username { margin-right: 10px; }
   }
 }
