--- a/frontend/src/components/Explore/styles.scss
+++ b/frontend/src/components/Explore/styles.scss
@@ -4,6 +4,7 @@
   width: 100%;
   max-width: $max-card-width;
   margin: 0 auto;
+  margin-top: 50px;
   align-items: center;
   @include boxBorder(yes);
   @include breakpoint("phone") {
