3-69 완료  및 css  작업

--- a/frontend/src/components/CommentBox/styles.scss
+++ b/frontend/src/components/CommentBox/styles.scss
@@ -10,6 +10,7 @@
     resize: none;
     width: 100%;
     font-size: $normal-font-size;
+    padding: 2px 10px;
     &:focus {
       outline: none;
     }
