--- a/frontend/src/components/Loading/styles.scss
+++ b/frontend/src/components/Loading/styles.scss
@@ -5,6 +5,8 @@
     text-align: center; 
     padding-top: 3%;
     padding-bottom: 3%; 
+    box-sizing: border-box;
+    min-height: inherit;
     .spinner {
         width: 100px;
     }
